--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="Danni.png" alt="Profile Picture">
+					<img class="profile-pic" src="Justin.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:danni@bmbsolutions.com">
+		<a href="mailto:Justin@bmbsolutions.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.png" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Work- Danni@bmbsolutions.com</p>
+						<p class="text-detail">Work- Justin@bmbsolutions.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -63,7 +63,7 @@
 						<img src="assets/icon-phone.png" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Work- 631.343.7000 ext. 100</p>
+						<p class="text-detail">Work- 631.343.7000 ext. 107</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -82,7 +82,7 @@
 						<img src="assets/icon-phone.png" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Cell- 631.338.0576</p>
+						<p class="text-detail">Cell- 631.806.1134</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -110,7 +110,7 @@
 		</a>
 	</section>
 <section class="bg-color-white secondary-info">
-		<a href="https://www.linkedin.com/in/danni-amodeo-3b49a613/">
+		<a href="https://www.linkedin.com/in/justin-kern-70a796a6/">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
