--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Danni Amodeo</p>
-					<p class="text-title-company">Operations Manager</p>
+					<p class="text-name">Justin Kern</p>
+					<p class="text-title-company">CIO</p>
 					<p class="text-title-company">BMB Solutions Inc.</p>
 				</div>
 				<div class="col">
